Fix Color Contrast Issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ a {
 
 .btn-link {
     border-radius: 0 !important;
-    background-color: #28a745 !important;
+    background-color: #165f28 !important;
     color: white !important;
     display: inline-grid !important;
     align-items: center;
